[tool.poetry]
name = "d-Party"
version = "0.1.0"
description = ""
authors = ["U-Not <euno.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "d_party"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
channels = "^3.0.4"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"
channels-redis = "^3.3.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
django-debug-toolbar = "^3.6.0"
django-jazzmin = "^2.4.0"
pydantic = "^1.9.2"
django-boost = "^2.0"
djangorestframework = "^3.13.1"
django-filter = "^22.1"
djangochannelsrestframework = "^1.1.0"
pandas = "^1.4.4"
django-request = "^1.6.1"
django-crontab = "^0.7.1"
django-dotenv = "^1.4.2"
django-axes = "^5.39.0"
django-extensions = "^3.2.0"
Werkzeug = "^2.2.2"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
django-dynamic-shields = "^0.2.1"
django-debreach = "^2.1.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
black = "^22.8.0"
pytest-asyncio = "^0.19.0"
factory-boy = "^3.2.1"
pytest-cov = "^3.0.0"
pytest-profiling = "^1.7.0"
pytest-parallel = "^0.1.1"
lizard = "^1.17.10"
pip-licenses = "^3.5.4"
pipdeptree = "^2.2.1"
graphviz = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']