[tool.poetry]
name = "d-Party"
version = "0.1.0"
description = ""
authors = ["U-Not <euno.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "d_party"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"
channels-redis = "^4.0.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
django-debug-toolbar = "^3.7.0"
django-jazzmin = "^2.4.0"
pydantic = "^1.10.4"
django-boost = "^2.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
djangochannelsrestframework = "^1.1.0"
pandas = "^1.5.3"
django-request = "^1.6.1"
django-crontab = "^0.7.1"
django-dotenv = "^1.4.2"
django-axes = "^5.39.0"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.2"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
django-dynamic-shields = "^0.2.1"
django-debreach = "^2.1.0"
django-prometheus = "^2.2.0"
django-cryptography = "^1.1"
daphne = "^4.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
black = "^23.1.0"
pytest-asyncio = "^0.20.1"
factory-boy = "^3.2.1"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"
lizard = "^1.17.10"
pip-licenses = "^4.0.3"
pipdeptree = "^2.5.0"
graphviz = "^0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE="d_party.settings"
python_files = "tests.py test_*.py *_tests.py"
pytest_plugins = ["pytest-django","pytest_profiling"]